Fix horizontal scroll / overflow on mobile devices

--- a/internal/static/css/twtxt.css
+++ b/internal/static/css/twtxt.css
@@ -1,3 +1,7 @@
+body, html {
+    overflow-x: hidden;
+}
+
 article p img {
     display: block;
 }
